添加配置文件

--- a/src/main/webapp/theme/default/left-menu.css
+++ b/src/main/webapp/theme/default/left-menu.css
@@ -7,7 +7,9 @@
     padding:0px;
 }
 
-.accordion ul{padding: 0px;}
+.accordion ul{
+    padding: 0px;
+}
 
 .accordion .link {
     cursor: pointer;
